# PolarionMcp

./: .env.example  .flake8  .gitignore  README.md  WORKFLOW_EXAMPLES.md  XML_PARSER.md  mcp-http-client.js  openapi.copilot.yaml  openapi.yaml  polarion_config.example.yaml  pyproject.toml  run_server.sh  run_server_cline.sh
lib/polarion/: polarion_driver.py
mcp_server/: actions.py  auth.py  config.py  docgen.py  helpers.py  main.py  main_cline.py  middleware.py  models.py  settings.py  tools.py
mcp_server/certs/: .gitkeep
mcp_server/routers/: mcp_endpoint.py  polarion.py
mcp_server/types/: __init__.py  exceptions.py  mcp_protocol.py  tools.py
scripts/: generate_certs.sh  generate_openapi.py  parse_custom_fields.py
scripts/bash/: generate_certs.sh
tests/: test_config.py  test_helpers.py  test_main.py  test_server.py  test_tools_display.py  test_workitem.py
tests/lib/polarion/: test_polarion_driver.py
tests/mcp_server/: test_auth.py
tests/mcp_server/routers/: test_mcp_endpoint.py  test_polarion.py
